# club_coding

./: .env  .gitignore  Cargo.toml  README.md  Rocket.toml  Rocket.toml.example  dump.rdb  rocket.toml
migrations/2018-04-08-151220_create_users_sessions/: down.sql  up.sql
migrations/2018-04-09-200035_create_users/: up.sql
migrations/2018-04-12-130030_create_videos/: down.sql  up.sql
migrations/2018-04-19-164142_create_subscriptions/: down.sql  up.sql
migrations/2018-04-19-165024_add_users_timestamps/: down.sql  up.sql
migrations/2018-04-19-170518_add_users_sessions_timestamps/: down.sql  up.sql
migrations/2018-04-19-170650_add_videos_timestamps/: down.sql  up.sql
migrations/2018-04-28-112623_create_users_stripe_card/: down.sql  up.sql
migrations/2018-04-28-112634_create_users_stripe_token/: down.sql  up.sql
migrations/2018-04-28-112658_create_users_stripe_customer/: down.sql  up.sql
migrations/2018-04-28-112709_create_users_stripe_subscriptions/: down.sql  up.sql
migrations/2018-04-28-145730_create_series/: up.sql
src/: admin.rs  authentication.rs  charge.rs  custom_csrf.rs  database.rs  email.rs  errors.rs  lib.rs  main.rs  member.rs  models.rs  pages.rs  payment.rs  request_network.rs  schema.rs  search.rs  series.rs  settings.rs  structs.rs  subscription.rs  tests.rs  users.rs  videos.rs
templates/: add_card.html.tera  base.html.tera  charge.html.tera  cookie_policy.html.tera  cookie_policy_nologin.html.tera  data_policy_nologin.html.tera  home.html.tera  index.html.tera  logged_in_base.html.tera  login.html.tera  password.html.tera  payment.html.tera  privacy_policy.html.tera  privacy_policy_nologin.html.tera  recover_email.html.tera  search.html.tera  search_nologin.html.tera  send_recover.html.tera  series.html.tera  series_nologin.html.tera  signup.html.tera  subscription.html.tera  subscription_member.html.tera  terms_of_service.html.tera  terms_of_service_nologin.html.tera  update_card.html.tera  watch.html.tera  watch_member.html.tera  watch_nologin.html.tera  watch_nomember.html.tera
(+118 files in other folders)
