[package]
name = "club_coding"
version = "0.1.0"
authors = ["Axel Nilsson"]

[dependencies]
rocket = { version = "0.3.11", features = ["tls"] }
rocket_codegen = "0.3.7"
serde_derive = "1.0.37"
serde = "1.0.37"
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "1.2.0", features = ["mysql", "chrono", "r2d2"] }
rand = "0.4.2"
time = "0.1"
bcrypt = "0.2.0"
csrf = "0.3.0"
data-encoding = "2.1.1"
stripe-rust = "0.4.5"
futures = "0.1"
hyper = "0.11"
hyper-tls = "0.1.3"
tokio-core = "0.1"
serde_json = "1.0.17"
tera = "0.11"
r2d2 = "0.8.2"

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["tera_templates", "json"]