[package]
name = "club_coding"
version = "0.1.0"
authors = ["Axel Nilsson"]

[dependencies]
rocket = "0.4.0"
rocket_codegen = "0.4.0"
serde_derive = "1.0.84"
serde = "1.0.84"
chrono = { version = "0.4.6", features = ["serde"] }
diesel = { version = "~1.3.3", features = ["mysql", "chrono", "r2d2"] }
rand = "0.6.4"
time = "0.1"
bcrypt = "0.2.1"
csrf = "0.3.0"
data-encoding = "2.1.2"
stripe-rust = "0.4.5"
futures = "0.1.25"
hyper = "0.12"
hyper-tls = "0.3.1"
tokio-core = "0.1.17"
serde_json = "1.0.34"
tera = "0.11"
r2d2 = "0.8.3"
regex = "1.1.0"
redis = "0.9.1"
r2d2_redis = "0.8.0"
reqwest = "0.9.7"

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["tera_templates", "json"]
